--- a/esup-blank-web-springmvc-servlet/pom.xml
+++ b/esup-blank-web-springmvc-servlet/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
       <artifactId>esup-blank</artifactId>
-      <groupId>org.esupportail</groupId>
+      <groupId>org.esupportail.blank</groupId>
       <version>0.2.3-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.esupportail</groupId>
+    <groupId>org.esupportail.blank</groupId>
     <artifactId>esup-blank-web-springmvc-servlet</artifactId>
     <packaging>war</packaging>
     <name>esup-blank-web-springmvc-servlet</name>
@@ -59,7 +59,7 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.esupportail</groupId>
+			<groupId>org.esupportail.blank</groupId>
 			<artifactId>esup-blank-domain-services</artifactId>
 			<version>0.2.3-SNAPSHOT</version>
 			<type>jar</type>
