--- a/esup-blank-domain-beans/pom.xml
+++ b/esup-blank-domain-beans/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>esup-blank</artifactId>
-		<groupId>org.esupportail</groupId>
+		<groupId>org.esupportail.blank</groupId>
 		<version>0.2.3-SNAPSHOT</version>
 	</parent>
-	<groupId>org.esupportail</groupId>
+	<groupId>org.esupportail.blank</groupId>
 	<artifactId>esup-blank-domain-beans</artifactId>
 	<version>0.2.3-SNAPSHOT</version>
 	<name>esup-blank-domain-beans</name>
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-core</artifactId>
-			<version>0.2.2</version>
+			<version>${esupcommons.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
