--- a/esup-blank-web-jsf-mixed/pom.xml
+++ b/esup-blank-web-jsf-mixed/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>esup-blank</artifactId>
-		<groupId>org.esupportail</groupId>
+		<groupId>org.esupportail.blank</groupId>
 		<version>0.2.3-SNAPSHOT</version>
 	</parent>
-	<groupId>org.esupportail</groupId>
+	<groupId>org.esupportail.blank</groupId>
 	<artifactId>esup-blank-web-jsf-mixed</artifactId>
 	<packaging>war</packaging>
 	<name>esup-blank-web-jsf-mixed</name>
@@ -276,7 +276,7 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.esupportail</groupId>
+			<groupId>org.esupportail.blank</groupId>
 			<artifactId>esup-blank-domain-services</artifactId>
 			<version>0.2.3-SNAPSHOT</version>
 			<type>jar</type>
@@ -289,6 +289,11 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency> 
+		<dependency>
+			<groupId>org.esupportail</groupId>
+			<artifactId>esup-commons2-jsf-portlet</artifactId>
+			<version>0.2.4-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-jsf-exception</artifactId>
