--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.esupportail</groupId>
+	<groupId>org.esupportail.blank</groupId>
 	<artifactId>esup-blank</artifactId>
 	<version>0.2.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -114,7 +114,7 @@
 		</plugins>
 	</build>
 	<properties>
-		<esupcommons.version>0.2.3-SNAPSHOT</esupcommons.version>
+		<esupcommons.version>0.2.4-SNAPSHOT</esupcommons.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
