Verification du bon fonctionnement LDAP avec notamment une exclusion au niveau du pom.xml pour éviter les effets de bord en JPA TODO: Une classe de test fonctionne pour le LDAP de Rennes 1. Le fichier est en java.sav afin de ne pas être lancé lors d'un mvn test TODO: Une classe de test devant pouvoir fonctionner avec un LDAP chargé dynamiquement (permettant d'éviter la dépendance à l'env. Rennes 1) a été préparée mais elle ne fonctionnement pas encore. Le ficier est en java.todo afin de ne pas être lancé lors d'un mvn test

--- a/example-domain-services/pom.xml
+++ b/example-domain-services/pom.xml
@@ -39,6 +39,12 @@
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-ldap</artifactId>
 			<version>${esupcommons.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-tx</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>easymock</groupId>
