--- a/esup-commons-jsf-parent/esup-commons2-jsf2/pom.xml
+++ b/esup-commons-jsf-parent/esup-commons2-jsf2/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<groupId>org.esupportail</groupId>
 		<artifactId>esup-commons2-jsf-parent</artifactId>
-		<version>0.2.4</version>
+		<version>0.2.5-SNAPSHOT</version>
 	</parent>
 	<artifactId>esup-commons2-jsf2</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2.4</version>
+	<version>0.2.5-SNAPSHOT</version>
 	<name>esup-commons-jsf2</name>
 	<url>http://maven.apache.org</url>
 	<build>
