--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
 			<version>${javax.el.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.wurfl</groupId>
+			<artifactId>wurfl</artifactId>
+			<version>1.2.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<properties>
 		<javax.el.version>1.0</javax.el.version>
