--- a/esup-blank-web-jsf-mixed/src/main/webapp/WEB-INF/web.xml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/WEB-INF/web.xml
@@ -94,6 +94,11 @@
 		<param-value>true</param-value>
 	</context-param>
 
+	<context-param>
+		<param-name>facelets.SKIP_COMMENTS</param-name>
+		<param-value>true</param-value>
+	</context-param>
+
 	<!-- FaceletViewHandler configuration -->
 	<context-param>
 		<param-name>org.apache.myfaces.trinidad.ALTERNATE_VIEW_HANDLER</param-name>
