--- a/esup-blank-web-jsf-mixed/pom.xml
+++ b/esup-blank-web-jsf-mixed/pom.xml
@@ -198,7 +198,7 @@
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-jsf-trinidad</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>${esupcommons.version}</version>
 			<type>pom</type>
 			<scope>compile</scope>
 		</dependency>
@@ -212,19 +212,19 @@
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-exceptionHandling</artifactId>
-			<version>0.2.3</version>
+			<version>${esupcommons.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency> 
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-jsf-portlet</artifactId>
-			<version>0.2.4-SNAPSHOT</version>
+			<version>${esupcommons.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>esup-commons2-jsf-exception</artifactId>
-			<version>0.2.3</version>
+			<version>${esupcommons.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 			<exclusions>
