[FIX] fix groupId issue of a dependance in esup-blank-web-springmvc-portlet POM.xml [UP] change project version to 0.2.4-SNAPSHOT (instead of 0.2.3-SNAPSHOT) + improve "version management" in POMs

--- a/esup-blank-dao/pom.xml
+++ b/esup-blank-dao/pom.xml
@@ -1,26 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>esup-blank</artifactId>
-		<groupId>org.esupportail.blank</groupId>
-		<version>0.2.3-SNAPSHOT</version>
-	</parent>
-	<groupId>org.esupportail.blank</groupId>
-	<artifactId>esup-blank-dao</artifactId>
-	<version>0.2.3-SNAPSHOT</version>
-	<name>esup-blank-dao</name>
-	<description>couche d'accès aux données</description>
-	<dependencies>
-		<dependency>
-			<groupId>org.esupportail</groupId>
-			<artifactId>esup-commons2-jpa</artifactId>
-			<version>${esupcommons.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.esupportail.blank</groupId>
-			<artifactId>esup-blank-domain-beans</artifactId>
-			<version>0.2.3-SNAPSHOT</version>
-		</dependency>
-	</dependencies>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>esup-blank</artifactId>
+        <groupId>org.esupportail.blank</groupId>
+        <version>0.2.4-SNAPSHOT</version>
+    </parent>
+    <groupId>org.esupportail.blank</groupId>
+    <artifactId>esup-blank-dao</artifactId>
+    <description>couche d'accès aux données</description>
+    <dependencies>
+        <dependency>
+            <groupId>org.esupportail</groupId>
+            <artifactId>esup-commons2-jpa</artifactId>
+            <version>${esupcommons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.esupportail.blank</groupId>
+            <artifactId>esup-blank-domain-beans</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
