--- a/esup-blank-web-jsf-portlet/pom.xml
+++ b/esup-blank-web-jsf-portlet/pom.xml
@@ -1,47 +1,45 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>esup-blank</artifactId>
-		<groupId>org.esupportail.blank</groupId>
-		<version>0.2.3-SNAPSHOT</version>
-	</parent>
-	<groupId>org.esupportail.blank</groupId>
-	<artifactId>esup-blank-web-jsf-portlet</artifactId>
-	<packaging>war</packaging>
-	<version>0.2.3-SNAPSHOT</version>
-	<name>esup-blank-web-jsf-portlet</name>
-	<description></description>
-	<build>
-		<defaultGoal>install</defaultGoal>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>org.esupportail</groupId>
-			<artifactId>esup-commons2-jsf-exception</artifactId>
-			<version>${esupcommons.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.esupportail.blank</groupId>
-			<artifactId>esup-blank-domain-services</artifactId>
-			<version>0.2.3-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.esupportail</groupId>
-			<artifactId>esup-commons2-jsf-portlet</artifactId>
-			<version>${esupcommons.version}</version>
-		</dependency>
-	</dependencies>
-	<properties>
-		<log.level>INFO</log.level>
-		<log.output>stdout</log.output>
-		<log.file>/tmp/esup-blank.log</log.file>
-		<cache.path>/tmp/esup-blank/cache</cache.path>
-	</properties>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>esup-blank</artifactId>
+        <groupId>org.esupportail.blank</groupId>
+        <version>0.2.4-SNAPSHOT</version>
+    </parent>
+    <groupId>org.esupportail.blank</groupId>
+    <artifactId>esup-blank-web-jsf-portlet</artifactId>
+    <packaging>war</packaging>
+    <description></description>
+    <build>
+        <defaultGoal>install</defaultGoal>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.esupportail</groupId>
+            <artifactId>esup-commons2-jsf-exception</artifactId>
+            <version>${esupcommons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.esupportail.blank</groupId>
+            <artifactId>esup-blank-domain-services</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.esupportail</groupId>
+            <artifactId>esup-commons2-jsf-portlet</artifactId>
+            <version>${esupcommons.version}</version>
+        </dependency>
+    </dependencies>
+    <properties>
+        <log.level>INFO</log.level>
+        <log.output>stdout</log.output>
+        <log.file>/tmp/esup-blank.log</log.file>
+        <cache.path>/tmp/esup-blank/cache</cache.path>
+    </properties>
 </project>
