--- a/esup-blank-domain-services/pom.xml
+++ b/esup-blank-domain-services/pom.xml
@@ -1,27 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>esup-blank</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>esup-blank</artifactId>
+        <groupId>org.esupportail.blank</groupId>
+        <version>0.2.4-SNAPSHOT</version>
+    </parent>
     <groupId>org.esupportail.blank</groupId>
-    <version>0.2.3-SNAPSHOT</version>
-  </parent>
-  <groupId>org.esupportail.blank</groupId>
-  <artifactId>esup-blank-domain-services</artifactId>
-  <version>0.2.3-SNAPSHOT</version>
-  <name>esup-blank-domain-services</name>
-  <description>Domain Interface and Impl</description>
-  <dependencies>
-  	<dependency>
-  		<groupId>org.esupportail.blank</groupId>
-  		<artifactId>esup-blank-domain-beans</artifactId>
-  		<version>0.2.3-SNAPSHOT</version>
-  		<type>jar</type>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.esupportail</groupId>
-  		<artifactId>esup-commons2-auth</artifactId>
-  		<version>${esupcommons.version}</version>
-  		<type>jar</type>
-  	</dependency>
-  </dependencies>
+    <artifactId>esup-blank-domain-services</artifactId>
+    <description>Domain Interface and Impl</description>
+    <dependencies>
+        <dependency>
+            <groupId>org.esupportail.blank</groupId>
+            <artifactId>esup-blank-domain-beans</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.esupportail</groupId>
+            <artifactId>esup-commons2-auth</artifactId>
+            <version>${esupcommons.version}</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
