--- a/esup-blank-web-springmvc-servlet/pom.xml
+++ b/esup-blank-web-springmvc-servlet/pom.xml
@@ -1,27 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-      <artifactId>esup-blank</artifactId>
-      <groupId>org.esupportail.blank</groupId>
-      <version>0.2.3-SNAPSHOT</version>
+        <artifactId>esup-blank</artifactId>
+        <groupId>org.esupportail.blank</groupId>
+        <version>0.2.4-SNAPSHOT</version>
     </parent>
-
     <groupId>org.esupportail.blank</groupId>
     <artifactId>esup-blank-web-springmvc-servlet</artifactId>
     <packaging>war</packaging>
-    <name>esup-blank-web-springmvc-servlet</name>
-    <version>0.2.3-SNAPSHOT</version>
-
     <dependencies>
-
-      <dependency>
-	<groupId>org.esupportail</groupId>
-	<artifactId>esup-commons2-web</artifactId>
-	<version>${esupcommons.version}</version>
-      </dependency>
-
+        <dependency>
+            <groupId>org.esupportail</groupId>
+            <artifactId>esup-commons2-web</artifactId>
+            <version>${esupcommons.version}</version>
+        </dependency>
         <!-- ===== Compile Time Dependencies ============================== -->
         <!-- the slf4j commons-logging replacement -->
         <dependency>
@@ -31,7 +25,6 @@
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
@@ -41,31 +34,24 @@
         </dependency>
         <!-- the other slf4j jars -->
         <!-- using log4j as backend -->
-
-	<!-- Servlet -->
-
-		<!-- Jackson JSON Mapper -->
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.5.3</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.esupportail.blank</groupId>
-			<artifactId>esup-blank-domain-services</artifactId>
-			<version>0.2.3-SNAPSHOT</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+        <!-- Servlet -->
+        <!-- Jackson JSON Mapper -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.esupportail.blank</groupId>
+            <artifactId>esup-blank-domain-services</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
-    
-
 </project>
