--- a/todo-list-web-jsf-servlet/src/main/resources/log4j.properties
+++ b/todo-list-web-jsf-servlet/src/main/resources/log4j.properties
@@ -11,8 +11,8 @@ log4j.appender.file.MaxBackupIndex=3
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %p [%c] - %m%n
 
-log4j.logger.org.esupportail.example=DEBUG
-log4j.logger.org.esupportail.commons.dao=DEBUG
+log4j.logger.org.esupportail.todolist=DEBUG
+#log4j.logger.org.esupportail.commons.dao=DEBUG
 log4j.logger.org.esupportail.portal.ws.client.support.uportal=ERROR
 log4j.logger.org.springframework.ldap.support=ERROR
 log4j.logger.org.esupportail.commons.services.ldap=WARN
