--- a/todo-list-web-jsf-servlet/src/main/resources/properties/config.properties
+++ b/todo-list-web-jsf-servlet/src/main/resources/properties/config.properties
@@ -36,7 +36,7 @@ cas.service=https://portal.domain.edu:8443/esup-example
 #
 ldap.url=ldap://ldap1.uhp-nancy.fr:391,ldap://ldap2.uhp-nancy.fr:391
 ldap.userDn=uid=lecteur-portail,ou=comptes,dc=uhp-nancy,dc=fr
-ldap.password=LektAnuR
+ldap.password=xxxxx
 ldap.base=dc=uhp-nancy,dc=fr
 ldap.dnSubPath=ou=people
 ldap.uidAttribute=uid
@@ -71,9 +71,10 @@ smtp.testName="Céline Didier"
 
 urlGeneration.casLoginUrl=https://sso-cas.unniv-rennes1.fr/login?service=%s
 
-urlGeneration.servletLoginUrl=http://localhost:8080/example-web-jsf-servlet/stylesheets/cas.faces
-urlGeneration.servletGuestUrl=http://localhost:8080/example-web-jsf-servlet/stylesheets/welcome.faces
-
+#urlGeneration.servletLoginUrl=http://localhost:8080/example-web-jsf-servlet/stylesheets/cas.faces
+#urlGeneration.servletGuestUrl=http://localhost:8080/example-web-jsf-servlet/stylesheets/welcome.faces
+urlGeneration.servletLoginUrl=http://localhost:8080/stylesheets/cas.faces
+urlGeneration.servletGuestUrl=http://localhost:8080/stylesheets/welcome.xhtml
 
 ########################################################################
 # WEB SERVICES (client part)
