--- a/esup-commons-jsf-parent/esup-commons-jsf-trinidad/pom.xml
+++ b/esup-commons-jsf-parent/esup-commons-jsf-trinidad/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<groupId>org.esupportail</groupId>
 	<artifactId>esup-commons2-jsf-trinidad</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<version>0.2.5-SNAPSHOT</version>
 	<name>esup-commons2-jsf-trinidad</name>
 	<description>Artifact pour esup-commons-jsf-trinidad
