[FIX] fix classpath issue: some needed dependencies were missing in the POM file

--- a/esup-commons-jsf-parent/esup-commons-jsf-trinidad/pom.xml
+++ b/esup-commons-jsf-parent/esup-commons-jsf-trinidad/pom.xml
@@ -1,46 +1,78 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.esupportail</groupId>
-		<artifactId>esup-commons2-jsf-parent</artifactId>
-		<version>0.2.5-SNAPSHOT</version>
-	</parent>
-	<groupId>org.esupportail</groupId>
-	<artifactId>esup-commons2-jsf-trinidad</artifactId>
-	<packaging>jar</packaging>
-	<version>0.2.5-SNAPSHOT</version>
-	<name>esup-commons2-jsf-trinidad</name>
-	<description>Artifact pour esup-commons-jsf-trinidad
-	</description>
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.myfaces.trinidad
-			</groupId>
-			<artifactId>trinidad-impl</artifactId>
-			<version>1.2.14</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.myfaces.core</groupId>
-			<artifactId>myfaces-impl</artifactId>
-			<version>1.2.9</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.1.2</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.myfaces.shared</groupId>
-			<artifactId>myfaces-shared-tomahawk</artifactId>
-			<version>4.0.2</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-	</dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.esupportail</groupId>
+        <artifactId>esup-commons2-jsf-parent</artifactId>
+        <version>0.2.5-SNAPSHOT</version>
+    </parent>
+    <groupId>org.esupportail</groupId>
+    <artifactId>esup-commons2-jsf-trinidad</artifactId>
+    <packaging>jar</packaging>
+    <version>0.2.5-SNAPSHOT</version>
+    <name>esup-commons2-jsf-trinidad</name>
+    <description>Artifact pour esup-commons-jsf-trinidad
+    </description>
+    <dependencies>
+        <dependency>
+            <groupId>javax.portlet</groupId>
+            <artifactId>portlet-api</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.trinidad</groupId>
+            <artifactId>trinidad-impl</artifactId>
+            <version>1.2.14</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-impl</artifactId>
+            <version>1.2.9</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.1.2</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.shared</groupId>
+            <artifactId>myfaces-shared-tomahawk</artifactId>
+            <version>4.0.2</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.portlet-bridge</groupId>
+            <artifactId>portlet-bridge-impl</artifactId>
+            <version>1.0.0</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.esupportail</groupId>
+            <artifactId>esup-commons2-jsf-exception</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>tomahawk12</artifactId>
+                    <groupId>org.apache.myfaces.tomahawk</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
 </project>
