--- a/esup-blank-web-springmvc-portlet/pom.xml
+++ b/esup-blank-web-springmvc-portlet/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>org.esupportail</groupId>
             <artifactId>esup-commons2-springmvc-portlet</artifactId>
-            <version>0.2.4-SNAPSHOT</version>
+            <version>${esupcommons.version}</version>
             <type>pom</type>
         </dependency>
         <dependency>
