--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
         </plugins>
     </build>
     <properties>
-        <esupcommons.version>0.2.4-SNAPSHOT</esupcommons.version>
+        <esupcommons.version>0.2.4</esupcommons.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
