--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.esupportail.blank</groupId>
     <artifactId>esup-blank</artifactId>
-    <version>0.2.4-SNAPSHOT</version>
+    <version>0.2.4</version>
     <packaging>pom</packaging>
     <description>An Blank Application to start your project</description>
     <scm>
-        <connection>scm:svn:https://subversion.cru.fr/esup-commons/trunk/esup-blank/</connection>
-        <developerConnection>scm:svn:https://subversion.cru.fr/esup-commons/trunk/esup-blank/</developerConnection>
-        <url>https://sourcesup.cru.fr/scm/?group_id=244</url>
+        <connection>scm:svn:https://subversion.cru.fr/esup-commons/tags/blank-0.2.4</connection>
+        <developerConnection>scm:svn:https://subversion.cru.fr/esup-commons/tags/blank-0.2.4</developerConnection>
+        <url>scm:svn:https://subversion.cru.fr/esup-commons/tags/blank-0.2.4</url>
     </scm>
     <repositories>
         <repository>
@@ -64,7 +63,7 @@
                 <version>2.0</version>
                 <configuration>
                     <tagBase>https://subversion.cru.fr/esup-commons/tags</tagBase>
-                   <goals></goals>
+                   <goals />
                 </configuration>
             </plugin>
             <plugin>
