--- a/esup-blank-web-jsf-mobile/pom.xml
+++ b/esup-blank-web-jsf-mobile/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>esup-blank</artifactId>
         <groupId>org.esupportail.blank</groupId>
-        <version>0.2.5-SNAPSHOT</version>
+        <version>0.2.5</version>
     </parent>
     <groupId>org.esupportail.blank</groupId>
     <artifactId>esup-blank-web-jsf-mobile</artifactId>
