Correction du bug sur deepLink : Passage du controller et UserBean en scope session, Correction des config urlGenerator et ajout du fetch EAGER pour la relation User-Information

--- a/example-web-jsf-servlet/src/main/resources/properties/config.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/config.properties
@@ -67,9 +67,8 @@ smtp.interceptName=ESUP-Portail Example
 
 urlGeneration.casLoginUrl=https://sso-cas.unniv-rennes1.fr/login?service=%s
 
-urlGeneration.servletLoginUrl=http://localhost:8080/example-web-jsf-servlet/stylesheets/cas.faces
-urlGeneration.servletGuestUrl=http://localhost:8080/example-web-jsf-servlet/stylesheets/welcome.faces
-
+urlGeneration.servletLoginUrl=http://localhost:8080/stylesheets/cas.faces
+urlGeneration.servletGuestUrl=http://localhost:8080/stylesheets/welcome.xhtml
 
 ########################################################################
 # WEB SERVICES (client part)
