--- a/example-web-jsf-mixed/src/main/resources/properties/defaults.properties
+++ b/example-web-jsf-mixed/src/main/resources/properties/defaults.properties
@@ -18,8 +18,13 @@ hibernate.jndiTemplateBeanName=jndiHibernateTemplate
 hibernate.jndiSessionFactoryBeanName=jndiSessionFactory
 hibernate.jndiUpgradeSessionFactoryBeanName=jndiUpgradeSessionFactory
 
+########################################################################
+# AUTHENTICATION
+#
+
+auth.bean=servletOrPortletAuthenticationService
+cas.url=https://sso-cas.domain.edu
 auth.portal.uidAttribute=uid
-cas.url=https://cas.domain.edu
 
 exceptionHandling.logLevel=INFO
 exceptionHandling.email=bugs@domain.edu
@@ -45,6 +50,10 @@ portal.testUser=smith
 portal.testGroupId=local.0
 portal.testGroupName=Everyone
 
+########################################################################
+# SMTP
+#
+
 smtp.host=smtp.domain.edu
 smtp.port=25
 smtp.user=
@@ -58,6 +67,14 @@ smtp.interceptName=Maintainer
 smtp.notInterceptedAddresses=
 smtp.testEmail=maintainer@domain.edu
 smtp.testName=Maintainer
+
+
+########################################################################
+# SERVER
+#
+
+tomcat.host=localhost
+tomcat.port.string=:8080
 
 timezone=Europe/Paris
 
