--- a/example-web-jsf-mixed/pom.xml
+++ b/example-web-jsf-mixed/pom.xml
@@ -1,65 +1,259 @@
-<?xml version="1.0"?>
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>esup-example</artifactId>
-		<groupId>org.esupportail</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<groupId>org.esupportail.example</groupId>
+		<version>0.2.6-SNAPSHOT</version>
 	</parent>
-	<groupId>org.esupportail</groupId>
-	<artifactId>example-web-jsf-mixed</artifactId>
+	<groupId>org.esupportail.example</groupId>
+	<artifactId>esup-example-web-jsf-mixed</artifactId>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<name>example-web-jsf-portlet</name>
-	<url>http://maven.apache.org</url>
 	<build>
-		<defaultGoal>install</defaultGoal>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
+		<defaultGoal>javadoc:javadoc</defaultGoal>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<minmemory>128m</minmemory>
+					<maxmemory>512m</maxmemory>
+					<goal>javadoc:javadoc</goal>
+					<reportOutputDirectory>docs/javadoc</reportOutputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-codegen-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration />
+			</plugin>
+		</plugins>
 	</build>
+	<properties>
+		<misc.version>0.1.0</misc.version>
+		<portletName>EsupExamplePortlet</portletName>
+	</properties>
+	<profiles>
+		<profile>
+			<id>Development</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+				<property>
+					<name>Development</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<filters>
+					<filter>src/main/resources/properties/defaults.properties</filter>
+					<filter>src/main/resources/properties/config.properties</filter>
+				</filters>
+				<resources>
+					<resource>
+						<directory>src/main/java</directory>
+						<includes>
+							<include>**/*.java</include>
+						</includes>
+					</resource>
+					<resource>
+						<directory>src/main/resources</directory>
+						<filtering>true</filtering>
+					</resource>
+					<resource>
+						<directory>src/main/webapp</directory>
+						<filtering>true</filtering>
+					</resource>
+				</resources>
+				<defaultGoal>jetty:run</defaultGoal>
+				<plugins>
+					<plugin>
+						<artifactId>maven-eclipse-plugin</artifactId>
+						<version>2.8</version>
+						<configuration>
+							<additionalProjectnatures>
+								<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
+							</additionalProjectnatures>
+							<additionalBuildcommands>
+								<buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
+							</additionalBuildcommands>
+							<downloadSources>true</downloadSources>
+							<downloadJavadocs>true</downloadJavadocs>
+							<wtpversion>1.5</wtpversion>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.mortbay.jetty</groupId>
+						<artifactId>maven-jetty-plugin</artifactId>
+						<version>6.1.25</version>
+						<configuration>
+							<contextPath>/</contextPath>
+							<scanIntervalSeconds>3</scanIntervalSeconds>
+							<scanTargetPatterns>
+								<scanTargetPattern>
+									<directory>src/main/webapp/WEB-INF</directory>
+									<includes>
+										<include>**/*.properties</include>
+										<include>**/*.xml</include>
+									</includes>
+								</scanTargetPattern>
+								<scanTargetPattern>
+									<directory>src/main/webapp/stylesheets</directory>
+									<includes>
+										<include>**/*.xhtml</include>
+									</includes>
+								</scanTargetPattern>
+							</scanTargetPatterns>
+							<webXml>${basedir}/target/classes/WEB-INF/web.xml</webXml>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>Production</id>
+			<activation>
+				<property>
+					<name>Production</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<filters>
+					<filter>src/main/resources/properties/defaults.properties</filter>
+					<filter>src/main/resources/properties/config.properties</filter>
+				</filters>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+						<filtering>true</filtering>
+					</resource>
+				</resources>
+				<defaultGoal>package</defaultGoal>
+				<plugins>
+					<plugin>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.1</version>
+						<configuration>
+							<webResources>
+								<resource>
+									<filtering>true</filtering>
+									<directory>src/main/webapp</directory>
+									<includes>
+										<include>WEB-INF/web.xml</include>
+										<include>WEB-INF/portlet.xml</include>
+									</includes>
+								</resource>
+							</webResources>
+							<warName>esup-example-${misc.version}</warName>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	<repositories>
+		<repository>
+			<id>esup-snapshots</id>
+			<url>https://mvn.esup-portail.org/content/repositories/snapshots</url>
+			<snapshots>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+		<repository>
+			<id>esup</id>
+			<url>https://mvn.esup-portail.org/content/repositories/releases</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+			</releases>
+		</repository>
+		<repository>
+			<id>esup-thirdparty</id>
+			<url>https://mvn.esup-portail.org/content/repositories/thirdparty</url>
+		</repository>
+	</repositories>
 	<dependencies>
-		<!--<dependency>
-			<groupId>org.esupportail</groupId>
-			<artifactId>esup-commons2-jsf-exception</artifactId>
-			<version>${esupcommons.version}</version>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.portlet</groupId>
+			<artifactId>portlet-api</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>el-api</artifactId>
+			<version>6.0.24</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-jaxrs</artifactId>
+			<version>1.6.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.2.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jtidy</groupId>
+			<artifactId>jtidy</artifactId>
+			<version>r938</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>core-renderer</artifactId>
+			<version>R8pre2</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.esupportail</groupId>
-			<artifactId>esup-commons2-jsf</artifactId>
+			<artifactId>esup-commons2-jsf-trinidad</artifactId>
 			<version>${esupcommons.version}</version>
+			<type>pom</type>
+			<scope>compile</scope>
 		</dependency>
-		--><dependency>
+		<dependency>
 			<groupId>org.esupportail</groupId>
-			<artifactId>example-web-jsf-shared</artifactId>
+			<artifactId>example-domain-services</artifactId>
+			<version>0.2.6-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.esupportail</groupId>
+			<artifactId>example-domain-beans</artifactId>
 			<version>1.0-SNAPSHOT</version>
-			<!--<exclusions>
-				<exclusion>
-					<groupId>org.esupportail</groupId>
-					<artifactId>esup-commons2-jsf2-exception</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.esupportail</groupId>
-					<artifactId>esup-commons2-jsf2</artifactId>
-				</exclusion>
-			</exclusions>
-		--></dependency>
-		<dependency>
-			<groupId>org.esupportail</groupId>
-			<artifactId>esup-commons2-jsf-portlet</artifactId>
-			<version>${esupcommons.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-	<properties>
-		<deploy.type>portlet</deploy.type>
-		<log.level>INFO</log.level>
-		<log.output>stdout</log.output>
-		<log.file>/tmp/blank.log</log.file>
-		<cache.path>/tmp/blank</cache.path>
-	</properties>
 </project>
