--- a/example-web-jsf-mixed/pom.xml
+++ b/example-web-jsf-mixed/pom.xml
@@ -221,6 +221,13 @@
 			<version>1.6</version>
 		</dependency>
 		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.0.8</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>net.sf.jtidy</groupId>
 			<artifactId>jtidy</artifactId>
 			<version>r938</version>
