--- a/example-web-jsf-mixed/src/main/resources/properties/defaults.properties
+++ b/example-web-jsf-mixed/src/main/resources/properties/defaults.properties
@@ -45,6 +45,17 @@ ldap.connectTimeout=5000
 ldap.attributes=cn,displayName,employeeType,department,homeDirectory
 ldap.searchDisplayedAttributes=cn,displayName,employeeType,department
 
+########################################################################
+# LOGGING
+#
+
+log.level=info
+log.output=file
+log.pattern=%d %p [%c] - %m%n
+log.file=esup-example.log
+log.file.maxFileSize=5MB
+log.file.maxBackupIndex=3
+
 portal.webServiceUrl=http://portal.domain.edu/services/UportalService
 portal.testUser=smith
 portal.testGroupId=local.0
@@ -77,13 +88,6 @@ tomcat.host=localhost
 tomcat.port.string=:8080
 
 timezone=Europe/Paris
-
-log.level=WARN
-log.output=stdout
-log.pattern=%d %p [%c] - %m%n
-log.file=esup-blank.log
-log.maxFileSize=5MB
-log.maxBackupIndex=3
 
 cache.path=/tmp/blank/cache
 
