--- a/esup-commons/esup-commons-exceptionHandling/pom.xml
+++ b/esup-commons/esup-commons-exceptionHandling/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<groupId>org.esupportail</groupId>
 		<artifactId>esup-commons2-parent</artifactId>
-		<version>0.2.6-SNAPSHOT</version>
+		<version>0.3.0-SNAPHOT</version>
 	</parent>
 	<artifactId>esup-commons2-exceptionHandling</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2.6-SNAPSHOT</version>
+	<version>0.3.0-SNAPHOT</version>
 	<name>esup-commons-exceptionHandling</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
@@ -21,6 +21,13 @@
 			<artifactId>servlet-api</artifactId>
 			<version>${javax.servlet.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.esupportail</groupId>
+			<artifactId>esup-commons2-jsf</artifactId>
+			<version>0.3.0-SNAPHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
