--- a/esup-commons/esup-commons-jsf-parent/esup-commons-jsf/pom.xml
+++ b/esup-commons/esup-commons-jsf-parent/esup-commons-jsf/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<groupId>org.esupportail</groupId>
 		<artifactId>esup-commons2-jsf-parent</artifactId>
-		<version>0.2.6-SNAPSHOT</version>
+		<version>0.3.0-SNAPHOT</version>
 	</parent>
 	<artifactId>esup-commons2-jsf</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2.6-SNAPSHOT</version>
+	<version>0.3.0-SNAPHOT</version>
 	<name>esup-commons-jsf</name>
 	<url>http://maven.apache.org</url>
 	<build>
@@ -18,18 +18,6 @@
 			</resource>
 		</resources>
 	</build>
-	<repositories>
-		<repository>
-			<id>maven2</id>
-			<url>http://repository.jboss.com/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.myfaces.core</groupId>
@@ -77,6 +65,13 @@
 			<artifactId>servlet-api</artifactId>
 			<version>${javax.servlet.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.esupportail</groupId>
+			<artifactId>esup-commons2-jsf</artifactId>
+			<version>0.3.0-SNAPHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<properties>
