appliactionContext.xml: la réference au bean Spring i18n.xml est supprimée. Le contenu du fichier i18n.xml n'est plus de nature Spring. Dans faces-config.xml, la gestion du resource-bundle est confiée à la Class org.esupportail.commons.jsf.ResourceBundle.
Les controllers utilisent la nouvelle Class org.esupportail.commons.jsf.BundleService.
La Class AbstractDomainAwareBean n'étend plus AbstractJsfMessagesAwareBean (supprimée) mais fait référence à applicationService (à toutes fins utiles).

Le pom.xml a été modifié pour supprimer les dépendances relatives à la librairie tomahawk.

--- a/esup-blank/esup-blank-web-jsf-mixed/pom.xml
+++ b/esup-blank/esup-blank-web-jsf-mixed/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>esup-blank</artifactId>
         <groupId>org.esupportail.blank</groupId>
-        <version>0.2.6-SNAPSHOT</version>
+        <version>0.3.0-SNAPHOT</version>
     </parent>
     <groupId>org.esupportail.blank</groupId>
     <artifactId>esup-blank-web-jsf-mixed</artifactId>
@@ -194,13 +194,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.esupportail</groupId>
-            <artifactId>esup-commons2-jsf-trinidad</artifactId>
-            <version>${esupcommons.version}</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>org.esupportail.blank</groupId>
             <artifactId>esup-blank-domain-services</artifactId>
             <version>${project.version}</version>
@@ -209,15 +202,29 @@
         </dependency>
         <dependency>
             <groupId>org.esupportail</groupId>
+            <artifactId>esup-commons2-jsf-trinidad</artifactId>
+            <version>${esupcommons.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <exclusions>
+            	<exclusion>
+            		<artifactId>myfaces-shared-tomahawk</artifactId>
+            		<groupId>org.apache.myfaces.shared</groupId>
+            	</exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.esupportail</groupId>
             <artifactId>esup-commons2-exceptionHandling</artifactId>
             <version>${esupcommons.version}</version>
             <type>jar</type>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.esupportail</groupId>
-            <artifactId>esup-commons2-jsf-portlet</artifactId>
-            <version>${esupcommons.version}</version>
+            <exclusions>
+            	<exclusion>
+            		<artifactId>tomahawk12</artifactId>
+            		<groupId>org.apache.myfaces.tomahawk</groupId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.esupportail</groupId>
