--- a/example-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/example-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml
@@ -103,7 +103,7 @@
 	<filter-mapping>
 		<filter-name>CAS Authentication Filter</filter-name>
 		<!-- <url-pattern>/stylesheets/cas.xhtml</url-pattern> -->
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/stylesheets/*</url-pattern>
 	</filter-mapping>
 	<filter>
 		<filter-name>CAS Validation Filter</filter-name>
