--- a/esup-formation-domain-beans/pom.xml
+++ b/esup-formation-domain-beans/pom.xml
@@ -23,5 +23,10 @@
 			<version>${esupcommons.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+    		<groupId>junit</groupId>
+    		<artifactId>junit</artifactId>
+   			<version>4.8.2</version>
+		</dependency>
     </dependencies>
 </project>
