--- a/esup-formation-domain-services/pom.xml
+++ b/esup-formation-domain-services/pom.xml
@@ -28,5 +28,10 @@
             <version>${esupcommons.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+    		<groupId>junit</groupId>
+    		<artifactId>junit</artifactId>
+    		<version>4.8.2</version>
+		</dependency>
     </dependencies>
 </project>
