[maven-release-plugin] prepare release commons2-0.2.6

--- a/esup-commons-jsf-parent/pom.xml
+++ b/esup-commons-jsf-parent/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>org.esupportail</groupId>
 		<artifactId>esup-commons2-parent</artifactId>
-		<version>0.2.6-SNAPSHOT</version>
+		<version>0.2.6</version>
 	</parent>
 	<artifactId>esup-commons2-jsf-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>0.2.6-SNAPSHOT</version>
+	<version>0.2.6</version>
 	<name>esup-commons-jsf-parent</name>
 	<url>http://maven.apache.org</url>
 	<modules>
