--- a/esup-commons-ldap/pom.xml
+++ b/esup-commons-ldap/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<artifactId>esup-commons2-parent</artifactId>
 		<groupId>org.esupportail</groupId>
-		<version>0.2.6-SNAPSHOT</version>
+		<version>0.2.6</version>
 	</parent>
 	<groupId>org.esupportail</groupId>
 	<artifactId>esup-commons2-ldap</artifactId>
-	<version>0.2.6-SNAPSHOT</version>
+	<version>0.2.6</version>
 	<name>esup-commons-ldap</name>
 	<url>http://maven.apache.org</url>
 	<repositories>
