--- a/pom.xml
+++ b/pom.xml
@@ -109,11 +109,11 @@
     <module>esup-formation-utils</module>
     <module>esup-formation-domain-beans</module>
     <module>esup-formation-domain-services</module>
-    <module>esup-formation-web-jsf-mixed</module>
+   <!--    <module>esup-formation-web-jsf-mixed</module> -->
     <module>esup-formation-web-jsf-servlet</module>
-    <module>esup-formation-web-jsf-mobile</module>
+  <!--   <module>esup-formation-web-jsf-mobile</module>
     <module>esup-formation-web-jsf-portlet</module>
-    <module>esup-formation-web-springmvc-servlet</module>
-    <module>esup-formation-web-springmvc-portlet</module>
+    <module>esup-formation-web-springmvc-servlet</module>-->
+    <module>esup-formation-web-springmvc-portlet</module> 
   </modules>
 </project>
