--- a/example-web-jsf-mixed/pom.xml
+++ b/example-web-jsf-mixed/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>esup-example</artifactId>
-		<groupId>org.esupportail.example</groupId>
-		<version>0.2.6-SNAPSHOT</version>
+		<groupId>org.esupportail</groupId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>org.esupportail.example</groupId>
 	<artifactId>esup-example-web-jsf-mixed</artifactId>
@@ -251,7 +251,7 @@
 		<dependency>
 			<groupId>org.esupportail</groupId>
 			<artifactId>example-domain-services</artifactId>
-			<version>0.2.6-SNAPSHOT</version>
+			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
