--- a/esup-formation-web-jsf-servlet/src/main/resources/properties/config.properties
+++ b/esup-formation-web-jsf-servlet/src/main/resources/properties/config.properties
@@ -23,7 +23,7 @@ cas.url=https://cas.uhp-nancy.fr/cas
 #
 ldap.url=ldap://ldap1.uhp-nancy.fr:391,ldap://ldap2.uhp-nancy.fr:391
 ldap.userDn=uid=lecteur-portail,ou=comptes,dc=uhp-nancy,dc=fr
-ldap.password=LektAnuR
+ldap.password=xxx
 ldap.base=dc=uhp-nancy,dc=fr
 ldap.dnSubPath=ou=people
 ldap.uidAttribute=uid
