--- a/esup-formation-domain-services/pom.xml
+++ b/esup-formation-domain-services/pom.xml
@@ -40,6 +40,12 @@
 			<version>${esupcommons.version}</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+		  <groupId>org.esupportail</groupId>
+		  <artifactId>esup-commons2-rs-cxf</artifactId>
+		  <version>${esupcommons.version}</version>
+		  <type>pom</type>
+		</dependency>
         <dependency>
     		<groupId>junit</groupId>
     		<artifactId>junit</artifactId>
