--- a/esup-formation/esup-formation-web-jsf-servlet/src/main/resources/properties/config.properties
+++ b/esup-formation/esup-formation-web-jsf-servlet/src/main/resources/properties/config.properties
@@ -16,15 +16,32 @@ datasource.bean=JDBCDataSource
 
 jpa.database.type=HSQL
 
-cas.url=https://cas.uhp-nancy.fr/cas
+########################################################################
+# SMTP
+#
+exceptionHandling.email=celine.didier@uhp-nancy.fr
+
+smtp.host=smtp.uhp-nancy.fr
+smtp.port=25
+smtp.charset=utf-8
+smtp.fromEmail=celine.didier@uhp-nancy.fr
+smtp.fromName=Esup-Formation Application
+smtp.interceptAll=true
+smtp.interceptEmail=celine.didier@uhp-nancy.fr
+smtp.interceptName=Céline DIDIER
+smtp.notInterceptedAddresses=
+smtp.testEmail=celine.didier@uhp-nancy.fr
+smtp.testName=Céline DIDIER
+
+cas.url=http://localhost/cas
 
 ########################################################################
 # LDAP
 #
-ldap.url=ldap://ldap1.uhp-nancy.fr:391,ldap://ldap2.uhp-nancy.fr:391
-ldap.userDn=uid=lecteur-portail,ou=comptes,dc=uhp-nancy,dc=fr
-ldap.password=xxx
-ldap.base=dc=uhp-nancy,dc=fr
+ldap.url=ldap://localhost:389
+ldap.userDn=
+ldap.password=
+ldap.base=dc=univ,dc=fr
 ldap.dnSubPath=ou=people
 ldap.uidAttribute=uid
 ldap.displayNameAttribute=displayName
